# ovejas_project

./: .gitignore  README.md
.github/workflows/: build-server.yaml  cd-project.yaml
cli/: Cargo.toml
cli/src/: executor.rs  lib.rs  main.rs  project.rs  rest.rs
cli/src/runtime/: language_executor.py
client/: Cargo.toml  local_state.json
client/src/: main.rs
device/: Cargo.toml
device/examples/: resource_a.json  resource_b.json
device/src/: lib.rs  main.rs  state.rs
infra/: .example.auto.tfvars  .terraform.lock.hcl  connect.sh  download.sh  main.tf
macros_test/: Cargo.toml
python_example_project/: main.py  pyproject.toml
python_sdk/: language_executor.py  main.py  pyproject.toml
python_sdk/lib/: curl.py  docker.py  registry.py  results.py  system.py
python_sdk/ovejas/: __init__.py  curl.py  docker.py  exceptions.py  registry.py  results.py  system.py
python_sdk/ovejas/runtime/: language_executor.py
python_sdk/runtime/: language_executor.py
server/: .env.example  Cargo.toml  diesel.toml  test.json
server/migrations/2025-01-08-025254_create_tables/: down.sql  up.sql
server/migrations/2025-01-11-023430_create_groups_users_projects_groups/: down.sql  up.sql
server/migrations/2025-01-11-034819_groups_to_state/: down.sql  up.sql
server/migrations/2025-01-11-035908_rename_groups_to_environment/: down.sql  up.sql
server/migrations/2025-01-11-040153_rename_references_to_groups/: down.sql  up.sql
server/migrations/2025-01-11-061753_rename_fk_group_id/: up.sql
server/migrations/2025-01-11-062735_fix_environment_to_project_fk/: down.sql  up.sql
server/migrations/2025-03-03-172036_add_machine_id/: down.sql  up.sql
server/src/: controller.rs  lib.rs  main.rs  models.rs  repository.rs  schema.rs  state.rs
shared/: Cargo.toml
shared/src/: admin_operations.rs  lib.rs  request_operations.rs  rest_dtos.rs  state_operations.rs
