[package]
name = "ovejas"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "cargo"] }
http = "1.2.0"
# pyo3 = { version = "0.22.5", features = ["extension-module"]}
shared = { version = "0.1.0", path = "../shared" }
pyo3 = "0.22.5"
tungstenite = "0.26.1"
