[package]
name = "device"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
env_logger = "0.11.5"
http = "1.2.0"
md-5 = "0.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shared = { version = "0.1.0", path = "../shared" }
tungstenite = "0.26.0"
