[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["yaml", "env"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shared = { version = "0.1.0", path = "../shared" }
tungstenite = "0.24.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures = "0.3.31"
